docs/api/qiskit/0.37/qiskit.algorithms.EvolutionResult.mdx
---
title: EvolutionResult (v0.37)
description: API reference for qiskit.algorithms.EvolutionResult in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.EvolutionResult
---

# EvolutionResult

<Class id="qiskit.algorithms.EvolutionResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/algorithms/evolvers/evolution_result.py" signature="EvolutionResult(evolved_state, aux_ops_evaluated=None)" modifiers="class">
  Bases: `qiskit.algorithms.algorithm_result.AlgorithmResult`

  Class for holding evolution result.

  **Parameters**

  *   **evolved\_state** (`Union`\[[`StateFn`](qiskit.opflow.state_fns.StateFn "qiskit.opflow.state_fns.state_fn.StateFn"), [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), [`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")]) – An evolved quantum state.
  *   **aux\_ops\_evaluated** (`Union`\[`List`\[`Optional`\[`Tuple`\[`complex`, `complex`]]], `Dict`\[`str`, `Tuple`\[`complex`, `complex`]], `None`]) – Optional list of observables for which expected values on an evolved state are calculated. These values are in fact tuples formatted as (mean, standard deviation).

  ## Methods

  <span id="qiskit-algorithms-evolutionresult-combine" />

  ### combine

  <Function id="qiskit.algorithms.EvolutionResult.combine" signature="EvolutionResult.combine(result)">
    Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

    **Raises**

    **TypeError** – Argument is None

    **Return type**

    `None`
  </Function>
</Class>

